{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 61,
  "lineage": "9c8e9e2c-edcb-1ca9-68e4-db45756f18cd",
  "resources": [
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764217278004:internet-gateway/igw-07ca410107adaff4b",
            "id": "igw-07ca410107adaff4b",
            "owner_id": "764217278004",
            "tags": {
              "Name": "tf-vpc-eks",
              "kubernetes.io/cluster/tf-jx-evolved-mullet": "shared"
            },
            "vpc_id": "vpc-09181e932edfd55df"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07ca410107adaff4b",
            "id": "r-rtb-04f0c481e57bd33b01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04f0c481e57bd33b0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.vpc.aws_internet_gateway.this",
            "module.eks-jx.module.cluster.module.vpc.aws_route_table.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04f0c481e57bd33b0",
            "owner_id": "764217278004",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf-vpc-eks-public",
              "kubernetes.io/cluster/tf-jx-evolved-mullet": "shared"
            },
            "vpc_id": "vpc-09181e932edfd55df"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095cc21a89eb9f9dd",
            "route_table_id": "rtb-04f0c481e57bd33b0",
            "subnet_id": "subnet-083d38cc94cae41a5"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.vpc.aws_route_table.public",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028b72fea30faa6a0",
            "route_table_id": "rtb-04f0c481e57bd33b0",
            "subnet_id": "subnet-0e14c42b248a51b35"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.vpc.aws_route_table.public",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051c0646611978e24",
            "route_table_id": "rtb-04f0c481e57bd33b0",
            "subnet_id": "subnet-03d1d35e4cfff9302"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.vpc.aws_route_table.public",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764217278004:security-group/sg-0ad6fcd27a1b7a1be",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0ad6fcd27a1b7a1be",
            "ingress": [],
            "name": "tf-jx-evolved-mullet2020062213141737640000000b",
            "name_prefix": "tf-jx-evolved-mullet",
            "owner_id": "764217278004",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-jx-evolved-mullet-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09181e932edfd55df"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764217278004:security-group/sg-0a80d10f35c27955b",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0a80d10f35c27955b",
            "ingress": [],
            "name": "tf-jx-evolved-mullet2020062213280170290000000f",
            "name_prefix": "tf-jx-evolved-mullet",
            "owner_id": "764217278004",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-jx-evolved-mullet-eks_worker_sg",
              "kubernetes.io/cluster/tf-jx-evolved-mullet": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-09181e932edfd55df"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-jx.module.cluster.module.eks.aws_eks_cluster.this",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-482193842",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ad6fcd27a1b7a1be",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1358001109",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad6fcd27a1b7a1be",
            "self": false,
            "source_security_group_id": "sg-0a80d10f35c27955b",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-jx.module.cluster.module.eks.aws_eks_cluster.this",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.workers",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3413124977",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a80d10f35c27955b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-jx.module.cluster.module.eks.aws_eks_cluster.this",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.workers",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3926015457",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a80d10f35c27955b",
            "self": false,
            "source_security_group_id": "sg-0ad6fcd27a1b7a1be",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-jx.module.cluster.module.eks.aws_eks_cluster.this",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.workers",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1579346417",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a80d10f35c27955b",
            "self": false,
            "source_security_group_id": "sg-0ad6fcd27a1b7a1be",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-jx.module.cluster.module.eks.aws_eks_cluster.this",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.workers",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-jx.module.cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-726380090",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a80d10f35c27955b",
            "self": false,
            "source_security_group_id": "sg-0a80d10f35c27955b",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks-jx.module.cluster.module.eks.aws_eks_cluster.this",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-jx.module.cluster.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.cluster",
            "module.eks-jx.module.cluster.module.eks.aws_security_group.workers",
            "module.eks-jx.module.cluster.module.vpc.aws_subnet.public",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764217278004:subnet/subnet-083d38cc94cae41a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-083d38cc94cae41a5",
            "map_public_ip_on_launch": true,
            "owner_id": "764217278004",
            "tags": {
              "Name": "tf-vpc-eks-public-us-east-1a",
              "kubernetes.io/cluster/tf-jx-evolved-mullet": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09181e932edfd55df"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764217278004:subnet/subnet-0e14c42b248a51b35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e14c42b248a51b35",
            "map_public_ip_on_launch": true,
            "owner_id": "764217278004",
            "tags": {
              "Name": "tf-vpc-eks-public-us-east-1b",
              "kubernetes.io/cluster/tf-jx-evolved-mullet": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09181e932edfd55df"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764217278004:subnet/subnet-03d1d35e4cfff9302",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-03d1d35e4cfff9302",
            "map_public_ip_on_launch": true,
            "owner_id": "764217278004",
            "tags": {
              "Name": "tf-vpc-eks-public-us-east-1c",
              "kubernetes.io/cluster/tf-jx-evolved-mullet": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09181e932edfd55df"
          },
          "dependencies": [
            "module.eks-jx.module.cluster.module.vpc.aws_vpc.this",
            "module.eks-jx.module.cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "module.eks-jx.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764217278004:vpc/vpc-09181e932edfd55df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c6f60ae791808950",
            "default_route_table_id": "rtb-0d06bef98c24377fc",
            "default_security_group_id": "sg-04372d76761b28e60",
            "dhcp_options_id": "dopt-61fe7d1b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09181e932edfd55df",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d06bef98c24377fc",
            "owner_id": "764217278004",
            "tags": {
              "Name": "tf-vpc-eks",
              "kubernetes.io/cluster/tf-jx-evolved-mullet": "shared"
            }
          },
          "dependencies": [
            "module.eks-jx.random_pet.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "module.eks-jx.provider.aws"
    },
    {
      "module": "module.eks-jx.module.cluster",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "cert_manager",
      "provider": "module.eks-jx.module.cluster.provider.kubernetes"
    },
    {
      "module": "module.eks-jx.module.cluster",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jx",
      "provider": "module.eks-jx.module.cluster.provider.kubernetes"
    }
  ]
}